--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #A0A0A0;
+    background-color: #B0B0B0;
     margin: 0;
     overflow: hidden;
 
@@ -51,8 +51,8 @@ body {
 }
 
 canvas {
-    margin: 0 auto;
+    image-rendering: pixelated;
     display: block;
-    position: relative;
-    border: 2px solid red;
+    margin: 0 auto;
+    border: 1px solid #707070;
 }
