--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,23 @@ body {
     -ms-user-select: none;
 }
 
+#logo {
+    position: absolute;
+    z-index: 1;
+    margin-left: 1em;
+}
+
+/*
+#settings {
+    position: absolute;
+    z-index: 2;
+    right: 1em;
+    height: 2.5em;
+    width: 2.5em;
+    background: url("../assets/settings.png") no-repeat;
+}
+*/
+
 #gamebar {
     display: flex;
     align-items: center;
@@ -15,11 +32,6 @@ body {
     width: 100%;
     background-color: #C0C0C0;
     box-shadow: 0 8px 4px -4px gray;
-}
-
-#content {
-    width: 100%;
-    height: 100%;
 }
 
 .face {
