--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,117 @@
+*:focus {
+    outline: none;
+}
+
 body {
-    background-color: #B0B0B0;
-    margin: 0;
     overflow: hidden;
+    margin: 0;
+    background-color: #B0B0B0;
 
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
 }
 
+p {
+    border-bottom: 1px solid black;
+    margin: 0 .5em .5em;
+    font-size: 2em;
+    text-align: center;
+}
+
+#gamebar {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 2.5em;
+    background-color: #C0C0C0;
+    box-shadow: 0 8px 4px -4px gray;
+    align-items: center;
+}
+
 #logo {
     position: absolute;
-    z-index: 1;
     margin-left: 1em;
 }
 
-/*
+#info {
+    position: absolute;
+    right: 4em;
+    width: 2.5em;
+    height: 2.5em;
+    background: url("../assets/info.png") no-repeat;
+}
+
 #settings {
     position: absolute;
-    z-index: 2;
-    right: 1em;
+    right: 1.25em;
     height: 2.5em;
     width: 2.5em;
     background: url("../assets/settings.png") no-repeat;
 }
-*/
 
-#gamebar {
-    display: flex;
-    align-items: center;
-    height: 2.5em;
-    width: 100%;
-    background-color: #C0C0C0;
-    box-shadow: 0 8px 4px -4px gray;
+#display {
+    position: absolute;
+    right: .5em;
+    top: 3em;
+
+    min-width: 20em;
+    width: auto;
+    height: auto;
+
+    border: 1px solid black;
+    border-radius: 2px;
+
+    background-color: #A0A0A0;
+    box-shadow: 0px 8px 4px -4px gray;
+    opacity: .95;
+
+    font-family: "Roboto", sans-serif;
+    font-size: 1em;
+}
+
+table, form {
+    width: 90%;
+    margin: 0 auto;
+}
+
+td {
+    padding: .5em 0;
+}
+
+input {
+    display: block;
+    border: none;
+    border-color: transparent;
+    margin: .5em 0;
+}
+
+input[type=number] {
+    width: 8%;
+    padding: .4em;
+    border-bottom: 1px solid black;
+    background: transparent;
+}
+
+input[type=submit] {
+    position: relative;
+    padding: .5em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .face {
+    width: 26px;
+    height: 26px;
     margin: auto;
     background: url('../assets/sheet.png') no-repeat;
     image-rendering: pixelated;
-    width: 26px;
-    height: 26px;
 }
 
 #normal {
@@ -63,8 +135,8 @@ body {
 }
 
 canvas {
-    image-rendering: pixelated;
     display: block;
     margin: 0 auto;
     border: 1px solid #707070;
+    image-rendering: pixelated;
 }
