--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,11 @@
     outline: none;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 body {
-    overflow: hidden;
     margin: 0;
     background-color: #B0B0B0;
 
@@ -22,7 +25,7 @@ p {
 #gamebar {
     position: relative;
     display: flex;
-    width: 100%;
+    width: auto;
     height: 2.5em;
     background-color: #C0C0C0;
     box-shadow: 0 8px 4px -4px gray;
@@ -56,8 +59,6 @@ p {
     top: 3em;
 
     min-width: 20em;
-    width: auto;
-    height: auto;
 
     border: 1px solid black;
     border-radius: 2px;
@@ -69,6 +70,7 @@ p {
     font-family: "Roboto", sans-serif;
     font-size: 1em;
 }
+
 
 table, form {
     width: 90%;
@@ -104,6 +106,10 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+#content {
+    overflow-x: scroll;
 }
 
 .face {
